--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <p>Arcaeaに収録されてるBMS曲を集めました</p>
             <p>難易度表の読み込みと表示に数秒かかります。</p>
             <hr>
-            <p class="mb-0"></p>
+            <p class="mb-0">何かあればお気軽にどうぞ：<a href=”https://discord.com/users/912308918095585291”>管理人Discord</a></p>
         </div>
 
 
