--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
         <div class="alert alert-success mb-3" role="alert">
             <p>Arcaeaに収録されてるBMS曲を集めました</p>
-            <p>難易度表の読み込みと表示に数秒かかります。</p>
+            <p>BYD★???やLN★???がありますが、通常難易度のものもまとめています</p>
             <hr>
             <p class="mb-0">何かあればお気軽にどうぞ：<a href=”https://discord.com/users/912308918095585291”>管理人Discord</a></p>
         </div>
@@ -55,7 +55,7 @@
                 var obj = $("#table_int");
 
                 obj.html("");
-                $("<thead class='table-dark'><tr><th>Level</th><th>Title(IR)</th><th>Artist(SongDL)</th><th>Sabun(SabunDL)</th><th>Comment</th></tr></thead><tbody>")
+                $("<thead class='table-dark'><tr><th>Level</th><th>Title (IR)</th><th>Artist (SongDL)</th><th>Sabun (SabunDL)</th><th>Comment</th></tr></thead><tbody>")
                     .appendTo(obj);
                 var obj_sep = null;
                 for (var i = 0; i < info.length; i++) {
