--- a/index.html
+++ b/index.html
@@ -28,9 +28,10 @@
 
         <div class="alert alert-success mb-3" role="alert">
             <p>Arcaeaに収録されてるBMS曲を集めました</p>
-            <p>BYD★???やLN★???がありますが、通常難易度のものもまとめています</p>
+            <p>通常難易度は☆表示、発狂難易度は★表示です。<br>
+                例外として xxx★???には通常難易度のものも含まれている事があります</p>
             <hr>
-            <p class="mb-0">何かあればお気軽にどうぞ：<a href=”https://discord.com/users/912308918095585291”>管理人Discord</a></p>
+            <p class="mb-0">難易度変更など何かあればお気軽にどうぞ：<a href=”https://discord.com/users/912308918095585291”>管理人Discord</a></p>
         </div>
 
 
