--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
             <p>Arcaeaに収録されてるBMS曲を集めました</p>
             <p>通常難易度は☆表示、発狂難易度は★表示です。<br>
                 例外として xxx★???には通常難易度のものも含まれている事があります</p>
+            <p>GMK：GIMMICK<rb>
+               SB：SCRATCH<rb>
+               LN：LONG NOTES<rb>
+               ≡：縦連打 JACK</p>
             <hr>
             <p class="mb-0">難易度変更など何かあればお気軽にどうぞ：<a href=”https://discord.com/users/912308918095585291”>管理人Discord</a></p>
         </div>
