--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                LN：LONG NOTES<br>
                ≡：縦連打 JACK</p>
             <hr>
-            <p class="mb-0">難易度変更など何かあればお気軽にどうぞ：<a href=https://discord.com/users/912308918095585291>管理人Discord</a></p>
+            <p class="mb-0">難易度変更など何かあればお気軽にどうぞ：<a href=https://twitter.com/Shinichi_616>Twitter</a>・<a href=https://discord.com/users/912308918095585291>Discord</a></p>
         </div>
 
 
