--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 
         <div class="alert alert-success mb-3" role="alert">
             <p>Arcaeaに収録されてるBMS曲を集めました</p>
-            <p>通常難易度は☆表示、発狂難易度は★表示です。<br>
-                例外として xxx★???には通常難易度のものも含まれている事があります</p>
+            <p>通常難易度は☆表記、発狂難易度は★表記です。<br>
+                例外として★???には通常難易度のものも含まれている事があります</p>
             <p>GMK：GIMMICK<br>
                SB：SCRATCH<br>
                LN：LONG NOTES<br>
