--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 
         <div class="alert alert-success mb-3" role="alert">
             <p>Arcaeaに収録されてるBMS曲を集めました</p>
+            <p><a href=https://drive.google.com/file/d/153O0IWXdy9Npz1Y2Non2lesWX50_R788/view?usp=sharing>Package</a></p>
             <p>通常難易度は☆表記、発狂難易度は★表記です。<br>
                 例外として★???には通常難易度のものも含まれている事があります</p>
             <p>GMK：GIMMICK<br>
